fixed admin input fields jumping border

--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -27,6 +27,16 @@
         }
     }
 
+    input {
+        border: 1px solid #aaa;
+    }
+    input[type=file] {
+        border: 0;
+        &:hover, &:focus {
+            border: 0;
+        }
+    }
+
     table {
         border-collapse: collapse;
         border-spacing: 0;
